--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
   min-height: 100vh;
-  background: linear-gradient(-35deg, #000428 0%, #004e92);
+  backdrop-filter: blur(10px);
+  background: linear-gradient(-35deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8));
 }
 
 code {
